--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,7 +11,7 @@
 }
 
 .logo {
-  background-color: black;
+  background-color: rgb(55, 95, 207);
   color: #fff;
   font-weight: 700;
   line-height: 35px;
